stlc-hs/testcases/stlc/ill-Typed/ifBranchConditionWrongType.lam
if (lam x : Nat . x) then zero else false
